Modify subtitle and add multiple model buttons
Updated subtitle and added new model options.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <body>
     <div class="container">
         <h1>🚀 PromptCompare</h1>
-        <p class="subtitle">Compare 5+ free LLM models side-by-side instantly</p>
+        <p class="subtitle">Compare 5+13+ models side-by-side instantly</p>
         
         <div class="card">
             <h2 style="margin-bottom: 20px;">Select Models</h2>
@@ -138,7 +138,39 @@
                     <div class="model-name">GPT-3.5 Turbo</div>
                     <div class="model-provider">OpenAI</div>
                 </div>
-            </div>
+            </di
+                                <div class="model-btn" data-id="cohere-command">
+                    <div class="model-name">Cohere Command</div>
+                    <div class="model-provider">Cohere</div>
+                </div>
+                <div class="model-btn" data-id="meta-llama-2">
+                    <div class="model-name">Meta Llama 2 70B</div>
+                    <div class="model-provider">Meta</div>
+                </div>
+                <div class="model-btn" data-id="palm-2">
+                    <div class="model-name">PaLM 2</div>
+                    <div class="model-provider">Google</div>
+                </div>
+                <div class="model-btn" data-id="gpt-4-turbo">
+                    <div class="model-name">GPT-4 Turbo</div>
+                    <div class="model-provider">OpenAI</div>
+                </div>
+                <div class="model-btn" data-id="claude-2">
+                    <div class="model-name">Claude 2</div>
+                    <div class="model-provider">Anthropic</div>
+                </div>
+                <div class="model-btn" data-id="mixtral-8x7b">
+                    <div class="model-name">Mixtral 8x7B</div>
+                    <div class="model-provider">Mistral</div>
+                </div>
+                <div class="model-btn" data-id="yi-34b">
+                    <div class="model-name">Yi 34B</div>
+                    <div class="model-provider">01.AI</div>
+                </div>
+                <div class="model-btn" data-id="deepseek-coder">
+                    <div class="model-name">DeepSeek Coder</div>
+                    <div class="model-provider">DeepSeek</div>
+                </div>v>
         </div>
 
         <div class="card">
@@ -188,6 +220,14 @@
                         'gemini-pro': 'Gemini Pro',
                         'mistral-7b': 'Mistral 7B',
                         'claude-instant': 'Claude Instant',
+                                                'cohere-command': 'Cohere Command',
+                        'meta-llama-2': 'Meta Llama 2 70B',
+                        'palm-2': 'PaLM 2',
+                        'gpt-4-turbo': 'GPT-4 Turbo',
+                        'claude-2': 'Claude 2',
+                        'mixtral-8x7b': 'Mixtral 8x7B',
+                        'yi-34b': 'Yi 34B',
+                        'deepseek-coder': 'DeepSeek Coder'
                         'gpt-3.5-turbo': 'GPT-3.5 Turbo'
                     };
                     return {
