Fix critical JS syntax errors: missing comma and double comma
Fixed two critical JavaScript syntax errors blocking all functionality:

1. Added missing comma after 'deepseek-coder': 'DeepSeek Coder' (line 230)
2. Removed double comma in name: modelNames[id],, (line 233)

These errors prevented:
- Model selection from working
- Compare button functionality
- All JavaScript event listeners from attaching

--- a/index.html
+++ b/index.html
@@ -227,8 +227,7 @@
                         'claude-2': 'Claude 2',
                         'mixtral-8x7b': 'Mixtral 8x7B',
                         'yi-34b': 'Yi 34B',
-                        'deepseek-coder': 'DeepSeek Coder'
-                        'gpt-3.5-turbo': 'GPT-3.5 Turbo'
+                'deepseek-coder': 'DeepSeek Coder',                        'gpt-3.5-turbo': 'GPT-3.5 Turbo'
                     };
                     return {
                         name: modelNames[id],,
